test: use Android-compatible UTF-8 source readers