@@ -1,6 +1,7 @@
 package com.shaterguy.chatgptselfrun;
 
 import org.junit.Test;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import static org.junit.Assert.*;
@@ -35,6 +36,6 @@ public final class SelfRun3DispatchScriptTest {
     private static String source(String name) throws Exception {
         Path p = Path.of("src/main/java/com/shaterguy/chatgptselfrun/" + name);
         if (!Files.exists(p)) p = Path.of("app/src/main/java/com/shaterguy/chatgptselfrun/" + name);
-        return Files.readString(p);
+        return new String(Files.readAllBytes(p), StandardCharsets.UTF_8);
     }
 }
